--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200');
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
 
 /*
 	Visualize by TEMPLATED
@@ -11,11 +11,30 @@
 /* Reset */
 
 .myWork {
-  display: flex;
-  justify-content: center;
+  margin: auto;
+  max-width: fit-content;
   min-height: 1.75em;
   opacity: 0;
-  transition: opacity .3s linear;
+  transition: opacity 0.3s linear;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.25);
+}
+
+.techs {
+  width: 70px;
+  margin: 20px 0px;
+}
+
+.row {
+  justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+}
+
+.technologyTitle {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: fit-content;
 }
 
 html,
@@ -139,7 +158,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -180,7 +199,7 @@ body {
 
 .row:after,
 .row:before {
-  content: '';
+  content: "";
   display: block;
   clear: both;
   height: 0;
@@ -1577,7 +1596,7 @@ body {
 
 body {
   background-color: #000;
-  background-image: url('../../images/bg.jpg');
+  background-image: url("../../images/bg.jpg");
   background-size: cover;
   background-position: top center;
 }
@@ -1602,7 +1621,7 @@ input,
 select,
 textarea {
   color: rgba(255, 255, 255, 0.65);
-  font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 13pt;
   font-weight: 200;
   line-height: 1.65;
@@ -1746,7 +1765,7 @@ code {
   background: rgba(255, 255, 255, 0.075);
   border-radius: 4px;
   border: solid 1px rgba(255, 255, 255, 0.25);
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
   padding: 0.25em 0.65em;
@@ -1754,7 +1773,7 @@ code {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   font-size: 0.9em;
   margin: 0 0 2em 0;
 }
@@ -1832,10 +1851,10 @@ label {
   margin: 0 0 1em 0;
 }
 
-input[type='text'],
-input[type='password'],
-input[type='email'],
-input[type='tel'],
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
 select,
 textarea {
   -moz-appearance: none;
@@ -1854,19 +1873,19 @@ textarea {
   width: 100%;
 }
 
-input[type='text']:invalid,
-input[type='password']:invalid,
-input[type='email']:invalid,
-input[type='tel']:invalid,
+input[type="text"]:invalid,
+input[type="password"]:invalid,
+input[type="email"]:invalid,
+input[type="tel"]:invalid,
 select:invalid,
 textarea:invalid {
   box-shadow: none;
 }
 
-input[type='text']:focus,
-input[type='password']:focus,
-input[type='email']:focus,
-input[type='tel']:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
 select:focus,
 textarea:focus {
   border-color: #ff6382;
@@ -1880,7 +1899,7 @@ textarea:focus {
 }
 
 .select-wrapper:before {
-  content: '';
+  content: "";
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: FontAwesome;
@@ -1906,9 +1925,9 @@ textarea:focus {
   display: none;
 }
 
-input[type='text'],
-input[type='password'],
-input[type='email'],
+input[type="text"],
+input[type="password"],
+input[type="email"],
 select {
   height: 2.75em;
 }
@@ -1917,8 +1936,8 @@ textarea {
   padding: 0.75em 1em;
 }
 
-input[type='checkbox'],
-input[type='radio'] {
+input[type="checkbox"],
+input[type="radio"] {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -1931,8 +1950,8 @@ input[type='radio'] {
   z-index: -1;
 }
 
-input[type='checkbox'] + label,
-input[type='radio'] + label {
+input[type="checkbox"] + label,
+input[type="radio"] + label {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.65);
   cursor: pointer;
@@ -1944,8 +1963,8 @@ input[type='radio'] + label {
   position: relative;
 }
 
-input[type='checkbox'] + label:before,
-input[type='radio'] + label:before {
+input[type="checkbox"] + label:before,
+input[type="radio"] + label:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: FontAwesome;
@@ -1954,12 +1973,12 @@ input[type='radio'] + label:before {
   text-transform: none !important;
 }
 
-input[type='checkbox'] + label:before,
-input[type='radio'] + label:before {
+input[type="checkbox"] + label:before,
+input[type="radio"] + label:before {
   background: rgba(255, 255, 255, 0.075);
   border-radius: 4px;
   border: solid 1px rgba(255, 255, 255, 0.25);
-  content: '';
+  content: "";
   display: inline-block;
   height: 1.65em;
   left: 0;
@@ -1970,25 +1989,25 @@ input[type='radio'] + label:before {
   width: 1.65em;
 }
 
-input[type='checkbox']:checked + label:before,
-input[type='radio']:checked + label:before {
+input[type="checkbox"]:checked + label:before,
+input[type="radio"]:checked + label:before {
   background: #ff6382;
   border-color: #ff6382;
   color: #ffffff;
-  content: '\f00c';
+  content: "\f00c";
 }
 
-input[type='checkbox']:focus + label:before,
-input[type='radio']:focus + label:before {
+input[type="checkbox"]:focus + label:before,
+input[type="radio"]:focus + label:before {
   border-color: #ff6382;
   box-shadow: 0 0 0 1px #ff6382;
 }
 
-input[type='checkbox'] + label:before {
+input[type="checkbox"] + label:before {
   border-radius: 4px;
 }
 
-input[type='radio'] + label:before {
+input[type="radio"] + label:before {
   border-radius: 100%;
 }
 
@@ -2382,9 +2401,9 @@ table.alt tfoot {
 
 /* Button */
 
-input[type='submit'],
-input[type='reset'],
-input[type='button'],
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
 button,
 .button {
   -moz-appearance: none;
@@ -2410,41 +2429,41 @@ button,
   white-space: nowrap;
 }
 
-input[type='submit']:hover,
-input[type='reset']:hover,
-input[type='button']:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
 button:hover,
 .button:hover {
   background-color: #ff7c96;
 }
 
-input[type='submit']:active,
-input[type='reset']:active,
-input[type='button']:active,
+input[type="submit"]:active,
+input[type="reset"]:active,
+input[type="button"]:active,
 button:active,
 .button:active {
   background-color: #ff496e;
 }
 
-input[type='submit'].icon,
-input[type='reset'].icon,
-input[type='button'].icon,
+input[type="submit"].icon,
+input[type="reset"].icon,
+input[type="button"].icon,
 button.icon,
 .button.icon {
   padding-left: 1.35em;
 }
 
-input[type='submit'].icon:before,
-input[type='reset'].icon:before,
-input[type='button'].icon:before,
+input[type="submit"].icon:before,
+input[type="reset"].icon:before,
+input[type="button"].icon:before,
 button.icon:before,
 .button.icon:before {
   margin-right: 0.5em;
 }
 
-input[type='submit'].fit,
-input[type='reset'].fit,
-input[type='button'].fit,
+input[type="submit"].fit,
+input[type="reset"].fit,
+input[type="button"].fit,
 button.fit,
 .button.fit {
   display: block;
@@ -2452,25 +2471,25 @@ button.fit,
   width: 100%;
 }
 
-input[type='submit'].small,
-input[type='reset'].small,
-input[type='button'].small,
+input[type="submit"].small,
+input[type="reset"].small,
+input[type="button"].small,
 button.small,
 .button.small {
   font-size: 0.8em;
 }
 
-input[type='submit'].big,
-input[type='reset'].big,
-input[type='button'].big,
+input[type="submit"].big,
+input[type="reset"].big,
+input[type="button"].big,
 button.big,
 .button.big {
   font-size: 1.35em;
 }
 
-input[type='submit'].alt,
-input[type='reset'].alt,
-input[type='button'].alt,
+input[type="submit"].alt,
+input[type="reset"].alt,
+input[type="button"].alt,
 button.alt,
 .button.alt {
   background-color: transparent;
@@ -2478,61 +2497,61 @@ button.alt,
   color: #ffffff !important;
 }
 
-input[type='submit'].alt:hover,
-input[type='reset'].alt:hover,
-input[type='button'].alt:hover,
+input[type="submit"].alt:hover,
+input[type="reset"].alt:hover,
+input[type="button"].alt:hover,
 button.alt:hover,
 .button.alt:hover {
   background-color: rgba(255, 255, 255, 0.075);
 }
 
-input[type='submit'].alt:active,
-input[type='reset'].alt:active,
-input[type='button'].alt:active,
+input[type="submit"].alt:active,
+input[type="reset"].alt:active,
+input[type="button"].alt:active,
 button.alt:active,
 .button.alt:active {
   background-color: rgba(255, 0, 0, 0.2);
 }
 
-input[type='submit'].alt.icon:before,
-input[type='reset'].alt.icon:before,
-input[type='button'].alt.icon:before,
+input[type="submit"].alt.icon:before,
+input[type="reset"].alt.icon:before,
+input[type="button"].alt.icon:before,
 button.alt.icon:before,
 .button.alt.icon:before {
   color: rgba(255, 255, 255, 0.35);
 }
 
-input[type='submit'].special,
-input[type='reset'].special,
-input[type='button'].special,
+input[type="submit"].special,
+input[type="reset"].special,
+input[type="button"].special,
 button.special,
 .button.special {
   background-color: #ff6382;
   color: !important;
 }
 
-input[type='submit'].special:hover,
-input[type='reset'].special:hover,
-input[type='button'].special:hover,
+input[type="submit"].special:hover,
+input[type="reset"].special:hover,
+input[type="button"].special:hover,
 button.special:hover,
 .button.special:hover {
   background-color: #ff7c96;
 }
 
-input[type='submit'].special:active,
-input[type='reset'].special:active,
-input[type='button'].special:active,
+input[type="submit"].special:active,
+input[type="reset"].special:active,
+input[type="button"].special:active,
 button.special:active,
 .button.special:active {
   background-color: #ff496e;
 }
 
-input[type='submit'].disabled,
-input[type='submit']:disabled,
-input[type='reset'].disabled,
-input[type='reset']:disabled,
-input[type='button'].disabled,
-input[type='button']:disabled,
+input[type="submit"].disabled,
+input[type="submit"]:disabled,
+input[type="reset"].disabled,
+input[type="reset"]:disabled,
+input[type="button"].disabled,
+input[type="button"]:disabled,
 button.disabled,
 button:disabled,
 .button.disabled,
@@ -2545,9 +2564,9 @@ button:disabled,
 }
 
 @media screen and (max-width: 480px) {
-  input[type='submit'],
-  input[type='reset'],
-  input[type='button'],
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"],
   button,
   .button {
     padding: 0;
@@ -2696,7 +2715,7 @@ button:disabled,
 }
 
 .poptrox-popup .closer:before {
-  content: '';
+  content: "";
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: FontAwesome;
@@ -2795,7 +2814,7 @@ body.is-covered #wrapper {
 }
 
 #footer:before {
-  content: '';
+  content: "";
   border-top: solid 1px rgba(255, 255, 255, 0.25);
   width: 10em;
   display: block;
